fix letter-spacing affected graphics

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -136,6 +136,7 @@ main {
     display: grid;
     grid-template-columns: 50% 1fr 50%;
     background: #000;
+    letter-spacing: initial;
 
     div {
         height: 100%;
